[project]
name = "rchan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bidict>=0.23.1",
    "blinker>=1.9.0",
    "captcha>=0.7.1",
    "certifi>=2026.2.25",
    "charset-normalizer>=3.4.4",
    "click>=8.3.1",
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "flask-wtf>=1.2.2",
    "h11>=0.16.0",
    "idna>=3.11",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.3",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "python-engineio>=4.13.1",
    "python-magic>=0.4.27",
    "python-socketio>=5.16.1",
    "pytz>=2026.1.post1",
    "requests>=2.32.5",
    "simple-websocket>=1.1.0",
    "urllib3>=2.6.3",
    "werkzeug>=3.1.6",
    "wsproto>=1.3.2",
    "wtforms>=3.2.1",
]
